--- a/layout.html
+++ b/layout.html
@@ -23,6 +23,8 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'><link rel="stylesheet" href="./govstyle.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -57,13 +59,13 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">BizLand<span>.</span></a></h1>
+      <h1 class="logo"><a href="index.html">EnB<span>Resources</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto " href="#hero">Schemes</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -92,6 +94,16 @@
 
     </div>
   </header><!-- End Header -->
+  <section id="hero" class="d-flex align-items-center">
+    <div class="container" data-aos="zoom-out" data-aos-delay="100">
+      <h1><span>Government Schemes</span></h1>
+      <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, debitis?</h2>
+      <div class="d-flex">
+        <a href="#main" class="btn-get-started scrollto">Get Started</a>
+        <a href="#" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+      </div>
+    </div>
+  </section><!-- End Hero -->
 
   <main id="main" data-aos="fade-up">
 
@@ -102,7 +114,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Inner Page</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" target="_blank">Home</a></li>
             <li>Inner Page</li>
           </ol>
         </div>
@@ -110,12 +122,16 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <section class="inner-page">
+    <section id="main-body" class="inner-page">
       <div class="container">
-        <p>
-          Example inner page template
-        </p>
+        <div class="item" data-aos="fade-right">3</div>
+        <div class="item" data-aos="fade-left" >4</div>
+        <div class="item" data-aos="fade-right">3</div>
+        <div class="item" data-aos="fade-left" >4</div>
+        <div class="item" data-aos="fade-right">3</div>
+        <div class="item" data-aos="fade-left" >4</div>
       </div>
+      <script src='https://unpkg.com/aos@2.3.0/dist/aos.js'></script><script  src="./script.js"></script>
     </section>
 
   </main><!-- End #main -->
